# SimpleCards

./: .gitignore  CLAUDE.md  Concept.md  Projektplan.md  README.md  api-specification.md  data-models.md  deployment.md  development-setup.md  docker-compose.yml  implementation-roadmap.md  technical-architecture.md
backend/: .env.example  Cargo.toml  PHASE_4_TESTING_PLAN.md  TESTING_PLAN.md
backend/migrations/: 001_initial_setup.sql  002_tasks_and_boards.sql
backend/src/: main.rs
backend/src/api/: auth.rs  boards.rs  comments.rs  mod.rs  projects.rs  tasks.rs  teams.rs  users.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/database/: connection.rs  mod.rs  models.rs  queries.rs
backend/src/utils/: errors.rs  mod.rs  validation.rs
backend/src/websocket/: events.rs  handler.rs  mod.rs
